--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/ethereum-icon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forkcast - Ethereum Upgrade Tracker</title>
     <meta name="description" content="See what's on the horizon and how it impacts you. Track Ethereum network upgrades and explore how changes affect users, developers, and the ecosystem." />
