--- a/public/404.html
+++ b/public/404.html
@@ -4,20 +4,14 @@
     <meta charset="utf-8">
     <title>Forkcast</title>
     <script type="text/javascript">
-      // GitHub Pages SPA redirect
-      // Store the current path and redirect to index.html
-      var pathSegmentsToKeep = 1;
+      // SPA redirect for custom domain
+      // Redirect to root and let React Router handle the routing
       var l = window.location;
-      l.replace(
-        l.protocol + '//' + l.hostname + (l.port ? ':' + l.port : '') +
-        l.pathname.split('/').slice(0, 1 + pathSegmentsToKeep).join('/') + 
-        '/?/' + 
-        l.pathname.slice(1).split('/').slice(pathSegmentsToKeep).join('/').replace(/&/g, '~and~') +
-        (l.search ? '&' + l.search.slice(1).replace(/&/g, '~and~') : '') +
-        l.hash
-      );
+      var path = l.pathname + l.search + l.hash;
+      l.replace(l.origin + '/?redirect=' + encodeURIComponent(path));
     </script>
   </head>
   <body>
+    <p>Redirecting...</p>
   </body>
 </html> 
