add site metadata

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
    
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://wolovim.github.io/forkcast/" />
+    <meta property="og:url" content="https://forkcast.org/" />
     <meta property="og:title" content="Forkcast - Ethereum Upgrade Tracker" />
     <meta property="og:description" content="See what's on the horizon and how it impacts you. Track Ethereum network upgrades and explore how changes affect users, developers, and the ecosystem." />
     <meta property="og:site_name" content="Forkcast" />
     
     <!-- Twitter -->
     <!-- <meta property="twitter:card" content="summary_large_image" /> -->
-    <meta property="twitter:url" content="https://wolovim.github.io/forkcast/" />
+    <meta property="twitter:url" content="https://forkcast.org/" />
     <meta property="twitter:title" content="Forkcast - Ethereum Upgrade Tracker" />
     <meta property="twitter:description" content="See what's on the horizon and how it impacts you. Track Ethereum network upgrades and explore how changes affect users, developers, and the ecosystem." />
     <meta property="twitter:creator" content="@wolovim" />
