introduce socials metacard

--- a/index.html
+++ b/index.html
@@ -6,21 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Forkcast - Ethereum Upgrade Tracker</title>
     <meta name="description" content="See what's on the horizon and how it impacts you. Track Ethereum network upgrades and explore how changes affect users, developers, and the ecosystem." />
-   
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://forkcast.org/" />
     <meta property="og:title" content="Forkcast - Ethereum Upgrade Tracker" />
     <meta property="og:description" content="See what's on the horizon and how it impacts you. Track Ethereum network upgrades and explore how changes affect users, developers, and the ecosystem." />
     <meta property="og:site_name" content="Forkcast" />
-    
-    <!-- Twitter -->
-    <!-- <meta property="twitter:card" content="summary_large_image" /> -->
-    <meta property="twitter:url" content="https://forkcast.org/" />
-    <meta property="twitter:title" content="Forkcast - Ethereum Upgrade Tracker" />
-    <meta property="twitter:description" content="See what's on the horizon and how it impacts you. Track Ethereum network upgrades and explore how changes affect users, developers, and the ecosystem." />
-    <meta property="twitter:creator" content="@wolovim" />
-    
+    <meta property="og:image" content="https://forkcast.org/forkcast-metacard.png" />
+    <meta property="og:image:alt" content="Forkcast - Ethereum Upgrade Tracker" />
+
+    <!-- Twitter / X -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://forkcast.org/" />
+    <meta name="twitter:title" content="Forkcast - Ethereum Upgrade Tracker" />
+    <meta name="twitter:description" content="See what's on the horizon and how it impacts you. Track Ethereum network upgrades and explore how changes affect users, developers, and the ecosystem." />
+    <meta name="twitter:image" content="https://forkcast.org/forkcast-metacard.png" />
+    <meta name="twitter:image:alt" content="Forkcast - Ethereum Upgrade Tracker" />
+
     <!-- Matomo -->
     <script>
       var _paq = window._paq = window._paq || [];
@@ -43,7 +46,7 @@
       // Handle GitHub Pages SPA redirect
       (function(l) {
         if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
+          var decoded = l.search.slice(1).split('&').map(function(s) {
             return s.replace(/~and~/g, '&')
           }).join('?');
           window.history.replaceState(null, null,
@@ -57,4 +60,4 @@
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
-</html> 
+</html>
